<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="notification">Notify</string>
    <string name="title">Title</string>
    <string name="heading">Subject</string>
    <string name="body">Body</string>
    <string name="create">Create Notification</string>
    <string name="app_name">ALS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="titles">
        <item>Attendance</item>
        <item>Your Location</item>
        <item>Maps</item>
        <item>Notifications</item>
        <item>Time Table</item>

    </string-array>

    <array name="icons">

        <item>@mipmap/attendance</item>
        <item>@drawable/tb</item>
        <item>@drawable/tb</item>
        <item>@drawable/tb</item>
        <item>@mipmap/tt</item>
    </array>
    <string name="title_activity_time_table">Time_table</string>
    <string name="GPSAlertDialogTitle" />
    <string name="GPSAlertDialogMessage" />
    <string name="settings" />
    <string name="cancel" />
    <string name="title_activity_report" />

    <string-array name="location_array">
        <item>B-block</item>
        <item>C-block</item>
        <item>D-block</item>
        <item>E-block</item>
        <item>F-block</item>
    </string-array>


</resources>